<?xml version="1.0"?>
<package format="2">
  <name>robot_main</name>
  <version>0.0.0</version>
  <description>The robot_main package, including stereo point cloud processing functionality.</description>

  <maintainer email="gorkom_projects@gmail.com">koen</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>        
  <depend>image_transport</depend>   
  <!-- <depend>cv_bridge</depend>          -->
  <depend>pcl_ros</depend>           
  <depend>message_filters</depend>   
  <build_depend>libopencv-dev</build_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <build_depend>libpcl-dev</build_depend>
  <exec_depend>libpcl-dev</exec_depend>

  <!-- If 'gazebo' is not directly used by the stereo processing node, you might remove these
       or keep them if your 'robot_main' package has other functionalities that use Gazebo. -->
  <export>
    </export>
</package>
